--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hardhat": "^2.8.3"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.1.11",
     "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^14.3.2"
   }
